# backend/app/Http/Controllers/StarWarsController.php
@@ -22,19 +22,28 @@ final class StarWarsController
         return ApiResponse::data($person);
     }
 
+    public function getFilm(int $id): JsonResponse
+    {
+        $film = $this->starwarsService->getFilm($id);
+
+        return ApiResponse::data($film);
+    }
+
     public function searchPeople(Request $request): JsonResponse
     {
         $queryParams = $request->query();
         $result = $this->starwarsService->searchPeople($queryParams);
 
-        return ApiResponse::paginated($result, 200);
+        return ApiResponse::paginated($result);
     }
 
     public function searchFilms(Request $request): JsonResponse
     {
         $queryParams = $request->query();
-        $result = $this->starwarsService->searchFilms($queryParams);
+        $films = $this->starwarsService->searchFilms($queryParams);
 
-        return ApiResponse::paginated($result, 200);
+        return ApiResponse::data(
+            array_map(fn($film) => $film->toSearchArray(), $films),
+        );
     }
 }
